correction couleur border info-bar-icon, activities-card .card-title  fixed avec un display flex align-items center

--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ header {
   margin: auto;
   width: 24px;
   height: 24px;
-  border: 1px solid black;
+  border: 1px solid #D9D9D9;
   border-radius: 50%;
 }
 
@@ -404,9 +404,7 @@ header {
 /* activities */
 
 .activities {
-  max-height: 559.02px;
   width: 100%;
-  max-width: 1360px;
   margin-top: 35px;
   padding: 30px;
   box-sizing: border-box;
@@ -429,15 +427,14 @@ header {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 297.5px;
-  /* height: 100%; */
-  /* max-height: 439px; */
   background-color: white;
   border-radius: 20px;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
 .activities-card .card-title {
+  display: flex;
+  align-items: center;
   box-sizing: border-box;
   padding: 20px 19px 20px 19px;
   height: 59px;
@@ -452,15 +449,13 @@ header {
     width: 100%;
   }
   .activities-card .card-title {
-    padding: 20px 19px 20px 19px;
-    height: 94px;
+    height: 70px;
   }
 }
 
 .activities-card img {
   width: 100%;
   height: 380px;
-  /* max-height: 86%; */
   border-radius: 20px 20px 0px 0px;
   object-fit: cover;
 }
@@ -540,5 +535,8 @@ header {
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
+  .hebergements-and-populaires {
+    flex-direction: column-reverse;
+  }
   /* ... */
 }
